# ml

./: .gitignore  README.md  run.py  setup.cfg  setup.py
DataBuilder/: 0_cvs_builder_base.ipynb  0_multiTensor_builder.ipynb  0_tensor_builder.ipynb  Docs.md  housing_builder.ipynb
DataBuilder/pklMaker/: 0_cvs_builder_base.ipynb  0_tensor_builder.ipynb  Docs.md  housing_builder.ipynb
DataBuilder/tensorMaker/: 0_tensor.builder.py  Docs.md  tensor_builder.py
Evaluators/: multi_eval.ipynb  multi_eval.py  single_eval.ipynb  single_eval.py  utils_eval.py
TrainLoops/: Docs.md  README.md  test.ipynb  tl00.py  tl02.py  tl04.py
TrainLoops/Test/: simplemodel.py  test.ipynb  tl00.py  tl01.py  tl02.py
TrainLoops/pkl_trainloops/: Docs.md  tl02.py  tl03.py  tl04.py
TrainLoops/tensor_trainloops/: Docs.md  tl05.py  tl06.py  tl06INPROGRESS.py  util_tl.py
TrainWrappers/: tl06.py
TrainWrappers/tw00/: Docs.md  Model.py  model.py  tl06.py  tw00.py
TrainWrappers/tw01/: Docs.md  tensor_builder.py  tl06.py  tw01.py  (+1 more)
ml-pipeline/: trash.py
src/: ExperimentModeFactory.py  ExperimentRunner.py  run.py
tests/: conftest.py  sample_model.py  temp_config.yaml  test.py  test_callbacks.py  test_data_script_base.py  test_data_script_eeg.py  test_experiment_mode.py  test_experiment_mode_base.py  test_experiment_mode_factory.py  test_experiment_mode_random.py  test_experiment_mode_resume.py  test_experiment_mode_single.py  test_experiment_runner.py  test_file.py  test_single_mode.py  test_trainloop.py  test_utils_logger.py  test_utils_validation.py  test_validation_utils.py  valid.yaml
(+69 files in other folders)
