# setup.cfg
[metadata]
name = ml_framework
version = 1.0.2
author = Kuba Jerzmanowski
description = A modular machine learning framework


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    torch>=2.0.0
    numpy>=1.20.0
    matplotlib>=3.5.0
    tqdm>=4.65.0
    scikit-learn>=1.0.0
    torcheval>=0.0.7

[options.packages.find]
where = src